--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
    <html>
    <body>
-     <h1>Asra IA 🤖</h1>
+     <h1>Asra IA </h1>
      <input type="text" id="userInput" placeholder="Parlez à Asra...">
      <button onclick="getResponse()">Envoyer</button>
      <p id="response"></p>
